# SFPGenerator

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeProjectGenerator.sln  CMakeProjectGenerator.vcxproj  CMakeSettings.json  LICENSE  README.md  SFPG.cpp  Templates.csv  build.bat  build_debug.bat  main.cpp  sonar-project.properties
.github/workflows/: build.yml
install_files/: QuickTemplates.csv
scripts/: complete_uninstall.bat  remove_rightclick.bat  setup_rightclick.bat
src/: SFPG.cpp  WinRightclickMenu.cpp
